zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__modal__tests__memories_failed_draft.snap
---
source: zeta-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  ≡ .                                                                                               
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │         ┌── Memory content ───────────────────────────────────────────────────[×]─┐          │  
  │    ▄  ▄ │                                                                         │          │  
  │  ▗█▛██▜█│  The memory changed in another window. Refresh before saving.           │          │  
  │  ▝▜████▛│  Use Rust                                                               │          │  
  │    ▝  ▘ │  保 留   两 个 空 格                                                          │          │  
  │         │                                                                         │          │  
  │         │                                                                         │          │  
  │         │                                                                         │          │  
  │         │                                                                         │          │  
  │         │                                                                         │          │  
  │         │                                                                         │          │  
  ╰─────────│                                                                         │──────────╯  
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │ Esc return  
  ╭─────────│  Esc to close                                                           │──────────╮  
  │ > backgr└─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
