zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__modal__tests__status_modal_processes.snap
---
source: zeta-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  ≡ .                                                                                               
                                                                                                    
                                                                                                    
            ┌── Status ───────────────────────────────────────────────────────────[×]─┐             
            │                                                                         │             
            │   Thread    Processes                                                   │             
            │                                                                         │             
            │  Memory diagnostics:          Disabled                                  │             
            │  Local total resident memory: collecting                                │             
            │  Local observed peak:         collecting                                │             
            │  Local total CPU:             collecting                                │             
            │  1 minute memory change:      collecting                                │             
            │  5 minute memory change:      collecting                                │             
            │  TUI resident memory:         collecting                                │             
            │  TUI CPU:                     collecting                                │             
            │  App Server:                  included in the TUI process               │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│  Tab to switch · Esc to close                                           │──────────╮  
  │ > Build └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
